Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Parens4.out
Parens4.java:12:16: compiler.err.illegal.parenthesized.expression
1 error
